# Zero-Shot-Text-Classification

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  quantize.ipynb
api/: middleware.py  models.py  server.py
handler/: inference.py
webapp/: gradio_app.py  inference.py
webapp/assets/: about.md  help.md  introduction.md
